<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attendence"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/upbg"
    android:padding="16dp"
    tools:context=".attendence">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Attendance"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <!--        android:background="@drawable/custom_edit_text"-->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/back_arrow_btn"
            android:contentDescription="@string/todo"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
           android:id="@+id/datePickerButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="Jan 01 2024"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:spinnerStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="10dp"
            android:onClick="openDatePicker"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Centered Spinner -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="200dp"
                android:layout_height="60dp"
                />
        </LinearLayout>


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp">
    <TableLayout
        android:id="@+id/attenTable"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/custom_line"

       android:layout_margin="40dp">
<!--                first row-->
       <TableRow
           android:background="@android:color/transparent"
           >
           <TextView
               android:id="@+id/name"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/Name"
               android:background="@drawable/custom_line"
               android:textColor="@android:color/black"
               android:padding="10sp"
               android:textSize="20sp"
               android:layout_weight="4"
               android:gravity="center_horizontal"
               />
           <TextView
               android:id="@+id/ID"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/ID"
               android:textColor="@android:color/black"
               android:background="@drawable/custom_line"
               android:padding="10sp"
               android:textSize="20sp"
               android:layout_weight="4"
               android:gravity="center_horizontal"
               />
           <TextView
               android:id="@+id/checkbox"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/check"
               android:textColor="@android:color/black"
               android:padding="10sp"
               android:background="@drawable/custom_line"
               android:textSize="20sp"
               android:layout_weight="4"
               android:gravity="center_horizontal"
               />

       </TableRow>
<!--       2nd row-->


   </TableLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">
        <Button

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="still"
            android:background="@drawable/custom_edit_text"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="still"
            android:layout_marginStart="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="114dp"
            android:background="@drawable/custom_edit_text"
            android:gravity="center"
            android:id="@+id/update"
            android:text="Update"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>