<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/upbg"
    android:padding="16dp"
    tools:context=".list">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Student list"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <!--        android:background="@drawable/custom_edit_text"-->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/back_arrow_btn"
            android:contentDescription="@string/todo"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addRow"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/add_icon"
            android:backgroundTint="@color/white" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_line"
            android:id="@+id/studentTab"
            android:layout_margin="40dp">
            <!--                first row-->

            <TableRow
                android:backgroundTint="@color/white"
                >
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ID"
                    android:background="@drawable/custom_line"
                    android:textColor="@android:color/black"
                    android:padding="10sp"
                    android:textSize="20sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"
                    android:textColor="@android:color/black"
                    android:background="@drawable/custom_line"
                    android:padding="10sp"
                    android:textSize="20sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    />


            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Update"
            android:background="@drawable/custom_edit_text"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</LinearLayout>